Update mongo-api (#14)
