# cmd/mongo-api/api/put.go
@@ -1,14 +1,11 @@
 package api
 
 import (
-	"encoding/json"
-	"io/ioutil"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 
-	customLogHandle "golang-gin-sample/pkg/loghandle"
-	mongoDatabase "golang-gin-sample/pkg/mongo/pkg"
+	customMongoDatabase "golang-gin-sample/pkg/mongo/pkg"
 	customMongoSetup "golang-gin-sample/pkg/mongo/setup"
 )
 
@@ -19,47 +16,40 @@ import (
 // @version 1.0
 // @accept  json
 // @produce json
-// @param collection path string true "collection"
 // @param params body MongoUpdateSingleDocumentBodyTop true "body"
 // @Success 200 string string
-// @Router /api/v1/updateSingleDocument/{collection} [put]
+// @Router /api/v1/updateSingleDocument [put]
 func UpdateSingleDocument(c *gin.Context) {
-	body, _ := ioutil.ReadAll(c.Request.Body)
-
-	var data MongoUpdateSingleDocumentBodyTop
-
-	json.Unmarshal(body, &data)
-
-	// check data exist or not
-	query := mongoDatabase.MongoResultHelper{
-		Cl:       mongoClient,
-		Db:       customMongoSetup.MongoDatabase,
-		Coll:     c.Param("collection"),
-		FindData: data.Name,
-	}
-
-	check, _ := query.FindOneDataFromMongo()
-	customLogHandle.ErrorHandle(
-		"UpdateSingleDocument",
-		"UpdateSingleDocument",
-		"UpdateSingleDocument (Get Mongo Document error)",
-		err,
+	var (
+		reqBody MongoUpdateSingleDocumentBodyTop
+		resBody CommonMap
 	)
 
-	if len(check) != 0 {
-		update := mongoDatabase.MongoUpdateHelper{
-			Cl:         mongoClient,
-			Db:         customMongoSetup.MongoDatabase,
-			Coll:       c.Param("collection"),
-			FindData:   data.Name,
-			Field:      data.Field,
-			UpdateData: data.Info,
-		}
-
-		update.UpdateSingleDocumentFromMongo()
+	if err := c.ShouldBindJSON(&reqBody); err != nil {
+		c.JSON(http.StatusBadRequest, err.Error())
+		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"status": "Success",
-	})
+	// check data exist or not
+	query := customMongoDatabase.MongoUpdateHelper{
+		Cl:          mongoClient,
+		Db:          customMongoSetup.MongoDatabase,
+		Coll:        reqBody.Collection,
+		Upsert:      reqBody.Upsert,
+		FindData:    reqBody.FindData,
+		UpdateField: reqBody.UpdateField,
+		UpdateData:  reqBody.UpdateData,
+	}
+
+	query.UpdateSingleDocumentFromMongo()
+
+	resBody = make(map[string]interface{})
+	resBody["status"] = "Success"
+	resBody["collection"] = reqBody.Collection
+	resBody["query_filter"] = reqBody.FindData
+	resBody["upsert"] = reqBody.Upsert
+	resBody["update_field"] = reqBody.UpdateField
+	resBody["update_data"] = reqBody.UpdateData
+
+	c.JSON(http.StatusOK, resBody)
 }
